# pmais

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.ts  vite.config.ts
src/: app.html
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/migrations/: 00001_add_key_value.down.sql  00001_add_key_value.up.sql
src-tauri/src/: main.rs
src-tauri/src/kvstore/: encoding.rs  memory.rs  mod.rs  sqlite.rs
src/components/: LeftRail.svelte  NavRail.svelte  RailAnchor.svelte  Svg.svelte  TableGrade.svelte  TopBar.svelte
src/icons/: AngleLeftSvg.svelte  CalendarMonthSvg.svelte  ConfigSvg.svelte  HomeSvg.svelte  NewsPaper.svelte  TableRowSvg.svelte  UserSvg.svelte
src/lib/grades/: fakegradesdata.ts  grades.ts
src/routes/: +layout.svelte  +page.ts
src/routes/agenda/: +layout.svelte  +page.svelte
src/routes/config/: +layout.svelte
src/routes/grades/: +layout.svelte  +page.svelte  DrawerContent.svelte  GradesTable.svelte  TableGradeTd.svelte
src/routes/redaction/: +layout.svelte
src/routes/saep/: +layout.svelte
src/routes/user/: +layout.svelte
