[package]
name = "pmais"
version = "0.0.0"
edition = "2021"
license = "Apache-2.0"

authors = [
    "Izan Rodrigues <izanrodrigues999@gmail.com>",
    "Gustavo Gimenez <gustavohsg2@hotmail.com>",
]
description = "Better version of student.p4ed.com"

[features]
custom-protocol = ["tauri/custom-protocol"]
bson-kv = ["dep:bson"]

[dependencies]
tokio.workspace = true

tauri.workspace = true
tauri-plugin-log.workspace = true
log.workspace = true

serde.workspace = true
serde_json.workspace = true
bson = { workspace = true, optional = true }
chrono.workspace = true

thiserror.workspace = true

sqlx.workspace = true

[build-dependencies]
tauri-build.workspace = true

[dev-dependencies]
env_logger.workspace = true
